work on J17 migration